[project]
name = "comfyui-kynode"
description = "NODES:Kevin nodes’, Image and Video utils"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/yorkane/ComfyUI-KYNode"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "yorkane"
DisplayName = "ComfyUI-KYNode"
Icon = ""
